refactor: test코드 수정